--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/earlyaccess/reepokakukana.css');
+@import url('https://fonts.googleapis.com/css2?family=Ree+Pop+Kaku+Kana&display=swap');
 
  body {
     aspect-ratio: 9 / 16;
